@@ -3,6 +3,7 @@
     <string id="30000">VideoDevil</string>
     <string id="30001">XBMC Media Center</string>
 
+    <string id="20191">Suorituslokin tallennus (debug log)</string>
     <string id="30002">Poista vastuuvapauslauseke</string>
     <string id="30003">Toistin</string>
     <string id="30004">Automaattinen</string>
