@@ -7,6 +7,7 @@
 <strings>
   <string id="30000">VideoDevil</string>
   <string id="30001">XBMC Media Center</string>
+  <string id="20191">Aktivera debugloggning</string>
   <string id="30002">Avaktivera ansvarsfriskrivning</string>
   <string id="30003">Spelartyp</string>
   <string id="30004">Auto</string>
